syntax = "proto3";

package rbac;
option go_package="./rbac";

message Request {
  string ping = 1;
}

message Response {
  string pong = 1;
}

message User {
  optional int64 id = 1;
  string account = 2;
  string userName = 3;
  string password = 4;
  string roles = 5;
}

message AuthUserReq {
  string account = 1;
  string password = 2;
}

message AuthUserResp {
  string userName = 2;
  string roles = 3;
}

message DeleteUserReq {
  repeated int64 ids = 1;
}

message DeleteUserResp {
}

message FindUserReq {
  optional string account = 1;
  optional string userName = 2;
  optional string roles = 3;
  optional int64 startTime = 4;
  optional int64 endTime = 5;
}

message FindUserResp {
  repeated User users = 1;
}


service Rbac {
  rpc Ping(Request) returns(Response);
  rpc AddUser(User) returns(User);
  rpc AuthUser(AuthUserReq) returns(AuthUserResp);
  rpc DeleteUser(DeleteUserReq) returns(DeleteUserResp);
  rpc FindUser(FindUserReq) returns(FindUserResp);
}
